# 16BitOpenGLProc

./: .gitignore  CMakeLists.txt  README.md  build-and-run.ps1  build.ps1  build_project.sh  config.json  dev.bat  main.cpp  preprocessed_output.txt  run.bat  run_tests.bat
models/: triangleArm.glb
shaders/: arm.frag  arm.vert  debug_marker.frag  grass.frag  grass.vert  grid_fragment.glsl  model.frag  model.vert  reticle.frag  reticle.vert  sky_gradient_fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  terrain.frag  terrain.vert  terrain_fragment.glsl  terrain_vertex.glsl  vertex_shader.glsl
shaders/ui/: loading.frag.glsl  loading.vert
src/: Shader.cpp  Shader.h  WindowManager.cpp  WindowManager.h  main.cpp
src/core/: Application.cpp  Application.h  ArmRenderer.cpp  ArmRenderer.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkConstants.h  Config.cpp  Config.h  Debug.cpp  Debug.h  DebugMarker.cpp  DebugMarker.h  DefaultChunkFactory.cpp  DefaultChunkFactory.h  GLResource.h  GridRenderer.cpp  GridRenderer.h  IArmRenderer.h  IChunkFactory.h  InputManager.cpp  InputManager.h  LoadingBar.cpp  LoadingBar.h  MockChunkFactory.h  Model.cpp  Model.h  ModelArmRenderer.cpp  ModelArmRenderer.h  Raycaster.cpp  Raycaster.h  Renderer.cpp  Renderer.h  ReticleRenderer.cpp  ReticleRenderer.h  Shader.cpp  Shader.h  SkyGradient.cpp  (+12 more)
src/entities/: EarthGlob.cpp  EarthGlob.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/terrain/: BaseNoise.h  Biome.cpp  Biome.h  BiomeManager.cpp  BiomeManager.h  ChunkManager.cpp  ChunkManager.h  ConfigurableNoise.cpp  ConfigurableNoise.h  DesertNoise.cpp  DesertNoise.h  FastNoiseLiteWrapper.cpp  FastNoiseLiteWrapper.h  GrassRenderer.cpp  GrassRenderer.h  GrassSpawner.cpp  GrassSpawner.h  MountainsNoise.cpp  MountainsNoise.h  NoiseConfig.h  NoiseFunction.h  PlainsNoise.cpp  PlainsNoise.h  SnowNoise.cpp  SnowNoise.h  Terrain.cpp  Terrain.h  TerrainConstants.h  TerrainManipulator.cpp  TerrainManipulator.h  TerrainNoiseFactory.cpp  TerrainNoiseFactory.h  TerrainType.h
tests/: test_main.cpp
tests/mocks/: MockTerrainThreadPool.h
tests/terrain/: TerrainTest.cpp
